src/view/App.css
body{
  color: black;
  background-color: yellow;
}

.navigation-bar {
  width: 100%;
  text-align: center;
  background-color: yellow;
}
.navigation-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}
.navigation-item {
  display: block;
  font-weight: 600;
}
.navigation-link {
  text-decoration: none;
  color: black;
  display: block;
  padding: 12px 30px;
  background-color: yellow;
}
.main-background {
  background-color: white;
}
.red{
  background-color: rgb(225, 18, 18);
}
.orange{
  background-color: rgb(255, 144, 47);
}
.yellow{
  background-color: rgb(255, 247, 0);
}
.green{
  background-color: rgb(0, 198, 0);
}
.blue{
  background-color: rgb(0, 229, 255);
}
.purple{
  background-color: rgb(170, 126, 232);
}
.main-red{
  background-color: rgb(226, 116, 116);
}
.main-orange{
  background-color: rgb(242, 188, 140);
}
.main-yellow{
  background-color: rgb(255, 252, 151);
}
.main-green{
  background-color: rgb(114, 211, 114);
}
.main-blue{
  background-color: rgb(170, 247, 255);
}
.main-purple{
  background-color: rgb(197, 171, 233);
}
@media (prefers-color-scheme: dark){
  .main-background {
    color: white;
  }
  .navigation-bar {
    background-color: darkblue/*rgb(184, 8, 8);*/
  }
  .navigation-link {
    color: white;
  }
  body{
    color: white;
  }
  .red{
    background-color: rgb(179, 0, 0);
  }
  .orange{
    background-color: rgb(194, 78, 0);
  }
  .yellow{
    background-color: rgb(194, 78, 0);
  }
  .green{
    background-color: rgb(0, 96, 0);
  }
  .blue{
    background-color: rgb(0, 24, 210);
  }
  .purple{
    background-color: rgb(63, 0, 135);
  }
  .main-red{
    background-color: rgb(109, 0, 0);
  }
  .main-orange{
    background-color: rgb(128, 51, 0);
  }
  .main-yellow{
    background-color: rgb(123, 49, 0);
  }
  .main-green{
    background-color: rgb(0, 60, 0);
  }
  .main-blue{
    background-color: rgb(0, 12, 104);
  }
  .main-purple{
    background-color: rgb(44, 0, 94);
  }
}
/*
.float-left{
  float: left;
}
.float-right{
  float: right;
}
*/

